# echoes

./: README.md  echoe.xmind  package.json
backend/: Cargo.toml  config.toml
backend/assets/: config.toml
backend/src/: config.rs  config.toml  error.rs  main.rs  manage.rs  secret.rs  utils.rs
backend/src/api/: fields.rs  mod.rs  page.rs  settings.rs  setup.rs  users.rs
backend/src/api/auth/: token.rs
backend/src/auth/: bcrypt.rs  jwt.rs
backend/src/common/: config.rs  helpers.rs  mod.rs
backend/src/config/: config.toml  mod.rs
backend/src/database/relational/: builder.rs  mod.rs
backend/src/database/relational/postgresql/: init.sql  mod.rs
backend/src/routes/: configure.rs  install.rs  intsall.rs  mod.rs  person.rs  theme.rs
backend/src/routes/auth/: token.rs
backend/src/security/: bcrypt.rs  jwt.rs
backend/src/sql/: mod.rs  postgresql.rs
backend/src/sql/postgresql/: init.sql  mod.rs
backend/src/storage/sql/: builder.rs  mod.rs  mysql.rs  postgresql.rs  schema.rs  sqllite.rs
backend/src/storage/sql/postgresql/: mod.rs  schema.sql
frontend/: .env  package.json  start.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/Requirements/: extensionRequirement.ts  generalRequirement.ts  pluginRequirement.ts  templateTypeRequirement.ts  themeTypeRequirement.ts
frontend/app/: entry.client.tsx  env.d.ts  env.ts  index.css  init.tsx  page.tsx  root.tsx  routes.tsx
frontend/common/: serializableType.ts
frontend/components/: ErrorBoundary.tsx  LoadingBoundary.tsx
frontend/config/: constants.ts  env.ts
(+96 files in other folders)
